--- a/app/src/main/res/layout/filter_design.xml
+++ b/app/src/main/res/layout/filter_design.xml
@@ -26,7 +26,7 @@
             <ImageView
                 android:id="@+id/img"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="120dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/image_3"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -72,73 +72,30 @@
                 app:layout_constraintTop_toBottomOf="@id/img">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="8dp"
                     android:text="Darga Mawijaya Tower Surabaya"
                     android:textColor="@color/black"
-                    android:textSize="18dp"
+                    android:textSize="14sp"
                     android:textStyle="bold" />
 
+                <View
+                    android:id="@+id/view"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="@color/lightblackcolor" />
+
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:drawableLeft="@drawable/ic_baseline_map"
                     android:text="Darga Mawijaya Tower Surabaya"
-                    android:textSize="14dp"
+                    android:textSize="10sp"
                     android:textStyle="normal" />
 
-
-            </LinearLayout>
-
-            <View
-                android:id="@+id/view"
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@color/lightblackcolor"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
-
-            <LinearLayout
-                android:id="@+id/linearLayout7"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/view">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/group_886"
-                    android:text="1"
-                    android:textSize="12dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:drawableLeft="@drawable/group_885"
-                    android:text="1"
-                    android:textSize="12dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:drawableLeft="@drawable/group_884"
-                    android:text="1,021 sqft"
-                    android:textSize="12dp" />
 
             </LinearLayout>
 
