--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -140,7 +140,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btn_list_property"
+                    android:id="@+id/btnFindAgents"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
